Fix <hr> overlapping floating content

--- a/teknologkoren_se/static/css/style.css
+++ b/teknologkoren_se/static/css/style.css
@@ -297,7 +297,6 @@ hr {
   border: 0;
   height: 1px;
   background-color: #ddd;
-  width: 75%;
   max-width: 30rem;
 }
 
